customer register page - add form fields and logic, create telephone base table

--- a/app/locale/en_US/SH_Telesign.csv
+++ b/app/locale/en_US/SH_Telesign.csv
@@ -5,3 +5,21 @@
 "Enable on Customer Edit Address", "Enable on Customer Edit Address"
 "Enable on Checkout", "Enable on Checkout"
 "Enable on Guest Checkout", "Enable on Guest Checkout"
+"Billing", "Billing"
+"Shipping", "Shipping"
+"SMS", "SMS"
+"Call", "Call"
+"Both types", "Both types"
+"Full Address", "Full Address"
+"Only Telephone", "Only Telephone"
+"General", "General"
+"Telesign notification type", "Telesign notification type"
+"Register Page Settings", "Register Page Settings"
+"Telesign Address Type During Registration", "Telesign Address Type During Registration"
+"Get default Telephone from address", "Get default Telephone from address"
+"Telephone validation", "Telephone validation"
+"Enable telephone validation based on selected country (Only if Address Type equals Full Address)", "Enable telephone validation based on selected country (Only if Address Type equals Full Address)"
+"Enable Address on Register Page", "Enable Address on Register Page"
+"Telephone field can't be empty", "Telephone field can't be empty"
+"Telephone number already exists", "Telephone number already exists"
+"Your verification code was sent according to the selected type: %s", "Your verification code was sent according to the selected type: %s"
