--- a/app/locale/en_US/SH_Telesign.csv
+++ b/app/locale/en_US/SH_Telesign.csv
@@ -23,3 +23,20 @@
 "Telephone field can't be empty", "Telephone field can't be empty"
 "Telephone number already exists", "Telephone number already exists"
 "Your verification code was sent according to the selected type: %s", "Your verification code was sent according to the selected type: %s"
+"SH Telesign", "SH Telesign"
+"Settings", "Settings"
+"Telesign API", "Telesign API"
+"API Settings", "API Settings"
+"Customer ID", "Customer ID"
+"REST API Key", "REST API Key"
+"SMS Settings", "SMS Settings"
+"Use Default Message", "Use Default Message"
+"Message Template", "Message Template"
+"Call Settings", "Call Settings"
+"Use Default Text-to-Speech Message", "Use Default Text-to-Speech Message"
+"Text-to-Speech Message Template", "Text-to-Speech Message Template"
+"Message length - 160 characters. Your text message must incorporate a $$CODE$$ placeholder to integrate the verify_code field. Example: Your code is $$CODE$$", "Message length - 160 characters. Your text message must incorporate a $$CODE$$ placeholder to integrate the verify_code field. Example: Your code is $$CODE$$"
+"Admin Settings", "Admin Settings"
+"Enable Data Grids on Admin Panel", "Enable Data Grids on Admin Panel"
+"Enable Telephone Base Data Grid", "Enable Telephone Base Data Grid"
+"Telephone Base", "Telephone Base"
